# magicdog-w_description

./: CMakeLists.txt  README.md  package.xml
launch/: view.launch.py
mjcf/: MAGICDOGW.xml
rviz/: view.rviz
urdf/: magicdog_w.urdf
