<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magicdog-w_description</name>
  <version>0.0.2</version>
  <description>Description package for Magicdog-W robot</description>
  <maintainer email="contact@magiclab.top">Magiclab</maintainer>
  <license>Default</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>